wise payment updated from usd to gbp, new debug log for admin screen, DRIFT WEBSITE

--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
     <title>Drift - #1 Ride App in Cayman Islands | Transportation in Grand Cayman</title>
     <meta name="title" content="Drift - #1 Ride App in Cayman Islands | Transportation in Grand Cayman">
     <meta name="description" content="Need transportation in the Cayman Islands? Drift is the easiest way to get around Grand Cayman. Book affordable rides instantly. Safe, reliable, and local. Download now on Google Play!">
-    <meta name="keywords" content="uber Cayman Islands, lyft Cayman Islands, uber Grand Cayman, lyft Grand Cayman, rideshare Cayman Islands, ridesharing Cayman, ride sharing app Cayman, transportation Cayman Islands, Grand Cayman transportation, ride app Cayman, taxi Cayman Islands, taxi alternative Cayman, how to get around Cayman Islands, getting around Grand Cayman, Cayman Islands ride share, airport transfer Cayman, book ride Grand Cayman, uber alternative Cayman, lyft alternative Grand Cayman, Cayman taxi app, Seven Mile Beach transportation, George Town taxi, Owen Roberts Airport transfer, Cayman Islands travel, Grand Cayman taxi service, Island Go alternative Cayman">
+    <meta name="keywords" content="transportation Cayman Islands, Grand Cayman transportation, ride app Cayman, taxi Cayman Islands, how to get around Cayman Islands, getting around Grand Cayman, Cayman Islands ride share, airport transfer Cayman, book ride Grand Cayman, transportation Grand Cayman, Cayman taxi app, ride sharing Cayman, Seven Mile Beach transportation, George Town taxi, Owen Roberts Airport transfer, Cayman Islands travel, Grand Cayman taxi service">
     <meta name="author" content="Drift Global">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -21,7 +21,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://drift-global.com/">
-    <meta property="og:title" content="Drift - Cayman's Carpool Movement">
+    <meta property="og:title" content="Drift - #1 Ride App in Cayman Islands | Get Around Grand Cayman">
     <meta property="og:description" content="The easiest way to get transportation in the Cayman Islands. Book affordable rides instantly with Drift. Safe, reliable, and proudly local.">
     <meta property="og:image" content="https://drift-global.com/images/drift-og-image.png">
     <meta property="og:locale" content="en_US">
@@ -30,7 +30,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://drift-global.com/">
-    <meta property="twitter:title" content="Drift - Cayman's Carpool Movement">
+    <meta property="twitter:title" content="Drift - #1 Ride App in Cayman Islands">
     <meta property="twitter:description" content="Need transportation in Grand Cayman? Drift is the easiest way to get around. Download now!">
     <meta property="twitter:image" content="https://drift-global.com/images/drift-og-image.png">
 
@@ -38,8 +38,8 @@
     <link rel="canonical" href="https://drift-global.com/">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/drift-logo.png">
-    <link rel="apple-touch-icon" href="images/drift-logo.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,7 +67,7 @@
             "ratingValue": "4.8",
             "ratingCount": "150"
         },
-        "description": "Drift is Cayman's carpool movement - a peer-to-peer carpooling platform connecting drivers and riders across Grand Cayman.",
+        "description": "Drift is the #1 ride-sharing app in the Cayman Islands. Get affordable, safe transportation around Grand Cayman instantly.",
         "downloadUrl": "https://play.google.com/store/apps/details?id=com.drift.global",
         "screenshot": "https://drift-global.com/images/app-screenshot.png",
         "author": {
@@ -82,8 +82,8 @@
     {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "Drift - Cayman's Carpool Movement",
-        "description": "Peer-to-peer carpooling platform in the Cayman Islands",
+        "name": "Drift - Cayman Islands Ride App",
+        "description": "Transportation and ride-sharing service in the Cayman Islands",
         "url": "https://drift-global.com",
         "logo": "https://drift-global.com/images/drift-logo.png",
         "image": "https://drift-global.com/images/drift-og-image.png",
@@ -133,7 +133,7 @@
                 "name": "How do I get around in the Cayman Islands?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "The easiest way to get around the Cayman Islands is with Drift, Cayman's peer-to-peer carpooling platform. Simply download the app, enter your destination, and get matched with a nearby driver instantly. It's safer, more affordable, and more convenient than traditional taxis."
+                    "text": "The easiest way to get around the Cayman Islands is with Drift, the local ride-sharing app. Simply download the app, enter your destination, and get matched with a nearby driver instantly. It's safer, more affordable, and more convenient than traditional taxis."
                 }
             },
             {
@@ -149,7 +149,7 @@
                 "name": "Is there Uber or Lyft in Cayman Islands?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "Uber and Lyft do not operate in the Cayman Islands. However, Drift provides a convenient peer-to-peer carpooling experience with local drivers who know the island. Drift is Cayman's own carpooling platform, built by locals for locals and tourists alike."
+                    "text": "Uber and Lyft do not operate in the Cayman Islands. However, Drift provides the same convenient ride-sharing experience with local drivers who know the island. Drift is the Cayman Islands' own ride-sharing app, built specifically for locals and tourists."
                 }
             },
             {
@@ -166,30 +166,6 @@
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text": "Download Drift before you land at Owen Roberts International Airport. Once you arrive, open the app, enter your hotel address, and a local driver will pick you up. It's the easiest way to get from the airport to Seven Mile Beach, George Town, or anywhere on the island."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "What is the best rideshare app in Cayman Islands?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Drift is the best rideshare and ride-sharing app in the Cayman Islands. While Uber and Lyft don't operate in Cayman, Drift provides the same convenient app-based experience with upfront pricing, GPS tracking, and verified local drivers. Download Drift for the best ridesharing experience in Grand Cayman."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "Is there an Uber alternative in Cayman Islands?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Yes! Drift is the perfect Uber and Lyft alternative in the Cayman Islands. Like Uber, Drift offers app-based ride booking, upfront pricing, cashless payments, real-time GPS tracking, and driver ratings. Drift is locally owned and operated, with drivers who know every corner of Grand Cayman."
-                }
-            },
-            {
-                "@type": "Question",
-                "name": "What ridesharing options are available in Grand Cayman?",
-                "acceptedAnswer": {
-                    "@type": "Answer",
-                    "text": "Drift is the leading ridesharing platform in Grand Cayman. Unlike traditional taxis, Drift offers transparent pricing before you book, cashless in-app payments, live GPS tracking, and 24/7 availability. Download the Drift app on Google Play to book rides anywhere on the island."
                 }
             }
         ]
@@ -211,6 +187,7 @@
         <div class="nav-container">
             <a href="/" class="logo">
                 <img src="images/drift-logo.png" alt="Drift Logo" class="logo-img">
+                <span class="logo-text">Drift</span>
             </a>
             <div class="nav-links" id="nav-links">
                 <a href="#how-it-works">How It Works</a>
@@ -244,20 +221,20 @@
                    target="_blank"
                    rel="noopener noreferrer"
                    class="store-badge google-play">
-                    <img src="images/google-play-badge.svg" alt="Get Drift on Google Play Store">
+                    <img src="images/google-play-badge.png" alt="Get Drift on Google Play Store">
                 </a>
                 <div class="store-badge app-store coming-soon">
-                    <img src="images/app-store-badge.svg" alt="Drift on Apple App Store - Coming Soon">
+                    <img src="images/app-store-badge.png" alt="Drift on Apple App Store - Coming Soon">
                     <span class="badge-label">Coming Soon</span>
                 </div>
             </div>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">100%</span>
-                    <span class="stat-label">Local</span>
+                    <span class="stat-number">1000+</span>
+                    <span class="stat-label">Happy Riders</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">5</span>
+                    <span class="stat-number">4.8</span>
                     <span class="stat-label">App Rating</span>
                 </div>
                 <div class="stat">
@@ -267,15 +244,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <div class="phone-mockup">
-                <div class="phone-frame">
-                    <div class="phone-notch"></div>
-                    <div class="phone-screen">
-                        <img src="images/drift-welcome-page.jpg" alt="Drift App - Cayman's Carpool Movement">
-                    </div>
-                    <div class="phone-home-indicator"></div>
-                </div>
-            </div>
+            <img src="images/app-mockup.png" alt="Drift App showing ride booking in Grand Cayman">
         </div>
     </header>
 
@@ -506,16 +475,16 @@
                        target="_blank"
                        rel="noopener noreferrer"
                        class="store-badge google-play large">
-                        <img src="images/google-play-badge.svg" alt="Download Drift on Google Play">
+                        <img src="images/google-play-badge.png" alt="Download Drift on Google Play">
                     </a>
                     <div class="store-badge app-store coming-soon large">
-                        <img src="images/app-store-badge.svg" alt="Drift App Store - Coming Soon">
+                        <img src="images/app-store-badge.png" alt="Drift App Store - Coming Soon">
                         <span class="badge-label">Coming Soon</span>
                     </div>
                 </div>
             </div>
             <div class="download-image">
-                <img src="images/drive-with-drift.png" alt="Drive with Drift in Grand Cayman">
+                <img src="images/phone-hand.png" alt="Person using Drift app in Grand Cayman">
             </div>
         </div>
     </section>
@@ -549,7 +518,7 @@
                    class="btn btn-primary">Start Driving Today</a>
             </div>
             <div class="driver-image">
-                <img src="images/drivers-wanted.png" alt="Drivers Wanted - Now Onboarding in Cayman">
+                <img src="images/driver-hero.png" alt="Happy Drift driver in Grand Cayman">
             </div>
         </div>
     </section>
@@ -563,7 +532,7 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h3>How do I get around in the Cayman Islands?</h3>
-                    <p>The easiest way to get around the Cayman Islands is with Drift, Cayman's peer-to-peer carpooling platform. Simply download the app, enter your destination, and get matched with a nearby driver instantly. It's safer, more affordable, and more convenient than traditional taxis.</p>
+                    <p>The easiest way to get around the Cayman Islands is with Drift, the local ride-sharing app. Simply download the app, enter your destination, and get matched with a nearby driver instantly. It's safer, more affordable, and more convenient than traditional taxis.</p>
                 </div>
 
                 <div class="faq-item">
@@ -573,7 +542,7 @@
 
                 <div class="faq-item">
                     <h3>Is there Uber or Lyft in Cayman Islands?</h3>
-                    <p>Uber and Lyft do not operate in the Cayman Islands. However, Drift provides a convenient peer-to-peer carpooling experience with local drivers who know the island. Drift is Cayman's own carpooling platform, built by locals for locals and tourists alike.</p>
+                    <p>Uber and Lyft do not operate in the Cayman Islands. However, Drift provides the same convenient ride-sharing experience with local drivers who know the island. Drift is the Cayman Islands' own ride-sharing app, built specifically for locals and tourists.</p>
                 </div>
 
                 <div class="faq-item">
@@ -600,16 +569,6 @@
                     <h3>Is Drift safe to use?</h3>
                     <p>Absolutely. All Drift drivers undergo background checks and verification. Every ride is GPS-tracked, and you can share your trip details with friends or family. Our 24/7 support team is always available if you need assistance.</p>
                 </div>
-
-                <div class="faq-item">
-                    <h3>What is the best rideshare app in Cayman?</h3>
-                    <p>Drift is the best rideshare app in the Cayman Islands. While Uber and Lyft don't operate here, Drift provides the same convenient experience - upfront pricing, GPS tracking, cashless payments, and verified local drivers who know the island.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3>Is there an Uber or Lyft alternative in Cayman?</h3>
-                    <p>Yes! Drift is the perfect Uber and Lyft alternative in Cayman. We offer everything you'd expect from a modern ridesharing app: book rides instantly, see prices upfront, pay through the app, and track your driver in real-time. 100% locally owned.</p>
-                </div>
             </div>
         </div>
     </section>
@@ -619,8 +578,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="images/drift-logo.png" alt="Drift Logo" class="footer-logo">
-                    <p>Cayman's carpool movement. Peer-to-peer carpooling. Not a taxi or rideshare service.</p>
+                    <img src="images/drift-logo-white.png" alt="Drift Logo" class="footer-logo">
+                    <p>The easiest way to get around the Cayman Islands. Safe, reliable, and proudly local.</p>
                     <div class="social-links">
                         <a href="https://www.facebook.com/profile.php?id=61583498042333" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
                         <a href="https://www.instagram.com/drift.cayman" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 4H8a4 4 0 0 0-4 4v8a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4V8a4 4 0 0 0-4-4zm2 12a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8z"/><circle cx="12" cy="12" r="3"/><circle cx="16.5" cy="7.5" r=".75"/></svg></a>
@@ -663,7 +622,7 @@
 
             <div class="footer-bottom">
                 <p>&copy; 2024 Drift Global. All rights reserved. Proudly serving the Cayman Islands.</p>
-                <p class="seo-text">Uber alternative Cayman Islands | Lyft alternative Grand Cayman | Rideshare app Cayman | Ridesharing Grand Cayman | Transportation Cayman Islands | Taxi alternative Grand Cayman | Best ride app Cayman</p>
+                <p class="seo-text">Transportation in Grand Cayman | Ride-sharing Cayman Islands | Taxi alternative Grand Cayman | How to get around Cayman Islands</p>
             </div>
         </div>
     </footer>
