--- a/public/index.html
+++ b/public/index.html
@@ -215,6 +215,7 @@
             <div class="nav-links" id="nav-links">
                 <a href="#how-it-works">How It Works</a>
                 <a href="#features">Features</a>
+                <a href="/blog/">Blog</a>
                 <a href="#download">Download</a>
                 <a href="#faq">FAQ</a>
                 <a href="#drive" class="nav-cta">Become a Driver</a>
@@ -633,6 +634,7 @@
                     <ul>
                         <li><a href="#how-it-works">How It Works</a></li>
                         <li><a href="#features">Features</a></li>
+                        <li><a href="/blog/">Blog</a></li>
                         <li><a href="#download">Download</a></li>
                         <li><a href="#drive">Become a Driver</a></li>
                         <li><a href="#faq">FAQ</a></li>
@@ -654,9 +656,9 @@
                     <h4>Support</h4>
                     <ul>
                         <li><a href="mailto:support@drift-global.com">Contact Us</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Safety</a></li>
+                        <li><a href="/privacy.html">Privacy Policy</a></li>
+                        <li><a href="/terms.html">Terms of Service</a></li>
+                        <li><a href="/blog/drift-safety-features.html">Safety</a></li>
                     </ul>
                 </div>
             </div>
