--- a/public/index.html
+++ b/public/index.html
@@ -655,6 +655,7 @@
                 <div class="footer-links">
                     <h4>Support</h4>
                     <ul>
+                        <li><a href="/support.html">Help Center</a></li>
                         <li><a href="mailto:support@drift-global.com">Contact Us</a></li>
                         <li><a href="/privacy.html">Privacy Policy</a></li>
                         <li><a href="/terms.html">Terms of Service</a></li>
@@ -664,7 +665,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 Drift Global. All rights reserved. Proudly serving the Cayman Islands.</p>
+                <p>&copy; 2025 Invovibe Tech Ltd. All rights reserved. Proudly serving the Cayman Islands.</p>
                 <p class="seo-text">Uber alternative Cayman Islands | Lyft alternative Grand Cayman | Rideshare app Cayman | Ridesharing Grand Cayman | Transportation Cayman Islands | Taxi alternative Grand Cayman | Best ride app Cayman</p>
             </div>
         </div>
