--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,10 @@
     <link rel="canonical" href="https://drift-global.com/">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/drift-logo.png">
-    <link rel="apple-touch-icon" href="images/drift-logo.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/drift-app-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/drift-app-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/drift-app-icon.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
